--- a/index.html
+++ b/index.html
@@ -4,7 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <!-- Google Fonts (Poppins) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet"
+    />
+    <!-- Local stylesheet -->
+    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <title>Rishabh Singh Sahil</title>
 </head>
-<body></body>
+<body>
+    <nav>
+    <div class="navbarContainer">
+        <button class="navbarBtn">Home</button>
+        <button class="navbarBtn">About</button>
+        <button class="navbarBtn">Services</button>
+        <button class="navbarBtn">Project</button>
+        <button class="navbarBtn">Skills</button>
+        <button class="navbarBtn">Contact</button>
+    </div>
+    </nav>
+</body>
 </html>
