Add : Landing page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
     />
     <!-- Local stylesheet -->
     <link rel="stylesheet" href="./assets/css/styles.css" />
@@ -26,5 +26,12 @@
         <button class="navbarBtn">Contact</button>
     </div>
     </nav>
+    <div class="landingContainer">
+    <div class="landingContent">
+        <p class="greeting">Namaste, I'm</p>
+        <h1 class="name">Rishabh Singh Sahil</h1>
+        <p class="titles">Graphic designer, Frontend developer & Freelancer</p>
+    </div>
+    </div>
 </body>
 </html>
