Add : About me & Services section

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet"
     />
     <!-- Local stylesheet -->
     <link rel="stylesheet" href="./assets/css/styles.css" />
@@ -26,6 +26,7 @@
         <button class="navbarBtn">Contact</button>
     </div>
     </nav>
+
     <div class="landingContainer">
     <div class="landingContent">
         <p class="greeting">Namaste, I'm</p>
@@ -33,5 +34,73 @@
         <p class="titles">Graphic designer, Frontend developer & Freelancer</p>
     </div>
     </div>
+
+    <div class="aboutMe-container">
+    <div class="image">
+        <img
+        src="./assets/images/rishabh.png"
+        alt="Rishabh Singh Sahil"
+        class="myImage"
+        />
+    </div>
+    <div class="text">
+        <h1 class="aboutMe-heading">About Me & My creative mind 😁</h1>
+        <p class="aboutMe-content">
+        In my pre-final year and pursuing Computer Science Engineering at SRM
+        Institute of Science and Technology Chennai , Tamil Nadu. I'm a UI
+        designer and frontend developer with expertise in creating
+        user-friendly interfaces and building responsive websites. My passion
+        lies in designing visually appealing interfaces that deliver an
+        immersive user experience. I look forward to partnering with you to
+        create exceptional digital experiences.
+        </p>
+    </div>
+    </div>
+
+    <div class="servicesContainer">
+    <h1 class="sectionHeading">Services</h1>
+    <div class="servicesCardContainer">
+        <div class="servicesCard">
+        <img
+            src="./assets/images/card1-img.png"
+            alt="Illustration"
+            class="cardImg"
+        />
+        <h5 class="cardTitle">UI Designer</h5>
+        <p class="cardContent">
+            I create engaging and intuitive user interfaces for websites and
+            applications that prioritize user experience, usability, and visual
+            aesthetics.
+        </p>
+        </div>
+        <div class="servicesCard">
+        <img
+            src="./assets/images/card2-img.png"
+            alt="Illustration"
+            class="cardImg"
+        />
+        <h5 class="cardTitle">Frontend Developer</h5>
+        <p class="cardContent">
+            I specialize in designing and building visually appealing and
+            user-friendly websites and applications using my expertise in HTML,
+            CSS, and JavaScript.
+        </p>
+        </div>
+        <div class="servicesCard">
+        <img
+            src="./assets/images/card3-img.png"
+            alt="Illustration"
+            class="cardImg"
+        />
+        <h5 class="cardTitle">Marketing</h5>
+        <p class="cardContent">
+            Gain hands-on experience in the dynamic world of marketing and
+            develop valuable skills to help propel your career forward with a
+            marketing internship.
+        </p>
+        </div>
+    </div>
+    </div>
 </body>
 </html>
+
