--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
               alt="Experience Card Image"
               class="workExpCardImg"
             />
-            <h4 class="position">UI Designing Intern</h4>
+            <h4 class="position">UI Designer Intern</h4>
             <p class="experienceDetails">YouMeWho | May 2022 - July 2022</p>
           </div>
           <div
@@ -368,7 +368,7 @@
               alt="Experience Card Image"
               class="workExpCardImg"
             />
-            <h4 class="position">UI Designing Intern</h4>
+            <h4 class="position">UI Designer Intern</h4>
             <p class="experienceDetails">
               DesignCode Lab | Oct 2022 - Dec 2022
             </p>
@@ -400,7 +400,7 @@
               alt="GitHub"
               class="footerIcon"
           /></a>
-          <a href="https://dribbble.com/frankie_sahil"
+          <a href="https://dribbble.com/frankiesahil"
             ><img
               src="./assets/images/dribble.png"
               alt="Dribbble"
