--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           data-aos-delay="500"
           data-aos-once="true"
         >
-          <h1 class="aboutMe-heading">About me & My creative mind..😁</h1>
+          <h1 class="aboutMe-heading">The creative mind</h1>
           <p class="aboutMe-content">
             In my pre-final year and pursuing Computer Science Engineering at
             SRM Institute of Science and Technology Chennai , Tamil Nadu. I'm a
