--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           data-aos-delay="500"
           data-aos-once="true"
         >
-          <h1 class="aboutMe-heading">The Creative Mind</h1>
+          <h1 class="aboutMe-heading">The Creative Mind ..!</h1>
     
           <p class="aboutMe-content">
             I am in my pre-final year, pursuing Computer Science Engineering at
