--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           data-aos-delay="500"
           data-aos-once="true"
         >
-          <h1 class="aboutMe-heading">The Creative Mind ..!</h1>
+          <h1 class="aboutMe-heading">The Creative Mind</h1>
     
           <p class="aboutMe-content">
             I am in my pre-final year, pursuing Computer Science Engineering at
@@ -82,7 +82,7 @@
           </p>
           <div class="resumeButtonContainer">
             <a
-              href="https://drive.google.com/file/d/1d-pA19HWp0jORqFlrA858aRYL1vkGFPn/view?usp=sharing"
+              href="https://drive.google.com/file/d/1dD-BfIfXblVpz1SU6yHlbnwK3x-MmEie/view?usp=sharing"
               ><button class="resumeDownload">Resume</button></a
             >
           </div>
